# minimal_server_2_classify

./: .gitignore  README.md  playground.ipynb  pyproject.toml
minimal_server_2_classify/: client.py  server.py
